# vuecrudd

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.in  README.md  vuecrudd.cpp
config/: development-server.yml  mime_types.json  test-server.yml
controllers/: CMakeLists.txt  admin_controllers.cpp  auth_controller.cpp  auth_controller.hpp  crm_companies_controller.cpp  crm_companies_controller.hpp  crm_company_comment_types_controller.cpp  crm_company_comment_types_controller.hpp  crm_company_comments_controller.cpp  crm_company_comments_controller.hpp  crm_company_files_controller.cpp  crm_company_files_controller.hpp  crm_company_types_controller.cpp  crm_company_types_controller.hpp  crm_controllers.cpp  crm_languages_controller.hpp  crm_people_controller.cpp  crm_people_controller.hpp  crm_person_comment_types_controller.cpp  crm_person_comment_types_controller.hpp  crm_person_comments_controller.cpp  crm_person_comments_controller.hpp  crm_position_tasks_controller.cpp  crm_position_tasks_controller.hpp  crm_positions_controller.cpp  crm_positions_controller.hpp  crm_sexes_controller.cpp  crm_sexes_controller.hpp  crm_street_prefixes_controller.cpp  crm_street_prefixes_controller.hpp  crm_tasks_controller.cpp  crm_tasks_controller.hpp  pages_controller.cpp  pages_controller.hpp  permissions_controller.cpp  permissions_controller.hpp  tasks_controller.cpp  tasks_controller.hpp  user_controller.cpp  user_permissions_controller.cpp  (+3 more)
include/: faker.en_us.hpp  faker.hpp  vuecrud_controller.hpp  vuecrud_gtest.hpp  vuecrud_utilities.hpp  vuecrudd_utilities.hpp
lib/: CMakeLists.txt  faker.cpp
models/: CMakeLists.txt  account.cpp  account.hpp  crm_company.cpp  crm_company.hpp  crm_company_comment.cpp  crm_company_comment.hpp  crm_company_comment_type.cpp  crm_company_comment_type.hpp  crm_company_file.cpp  crm_company_file.hpp  crm_company_type.cpp  crm_company_type.hpp  crm_language.cpp  crm_language.hpp  crm_models.cpp  crm_person.cpp  crm_person.hpp  crm_person_comment.cpp  crm_person_comment.hpp  crm_person_comment_type.cpp  crm_person_comment_type.hpp  crm_position.cpp  crm_position.hpp  crm_position_task.cpp  crm_position_task.hpp  crm_sex.cpp  crm_sex.hpp  crm_street_prefix.cpp  crm_street_prefix.hpp  permission.cpp  permission.hpp  task.cpp  task.hpp  user.cpp  user.hpp  user_permission.cpp  user_permission.hpp  user_type.cpp  user_type.hpp
tests/: CMakeLists.txt  auth_controller_test.cpp  authentication_access_test.cpp  crm_companies_controller_test.cpp  faker_test.cpp  tasks_controller.cpp
views/layouts/: default.inja.html
views/pages/: index.inja.html  login.inja.html
